syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.company";
option java_outer_classname = "Ind_1Proto";
option objc_class_prefix = "Ind_1";

package com.company;

message FieldNameA {
    string name = 1;
}

message FieldNameB {
    string name = 1;
}


message FieldE {
    string name = 1;
}

message FieldF {
    string name = 1;
}


message A {
    FieldNameB FieldB = 1;
}

message B {
    FieldNameA FieldA = 1;
    A FieldX = 2;
}

message C {
    repeated FieldNameB FieldB = 1;
}

message D {
    FieldNameA FieldA = 1;
    C FieldX = 2;
}

message E {
    FieldF FieldF = 1;
    FieldE FieldE = 2;
}

message F {
    FieldNameA FieldA = 1;
    E FieldX = 2;
}

message G {
    FieldF FieldF = 1;
    FieldE FieldE = 2;
}

message H {
    FieldNameA FieldA = 1;
    G FieldX = 2;
}

/***************************************************************
RESPONSE messages
****************************************************************/

message BResponse {
    FieldNameA FieldA = 1;
    A FieldName = 2;
}

message I {
    string Field1 = 1;
    bool Field2 = 2;
    string Field3 = 3;
}

message IResult {
    repeated I FieldName = 1;
}

message DResponse {
    FieldNameA FieldA = 1;
    IResult FieldName = 2;
}

message FResult {
    FieldNameB FieldB = 1;
}

message FResponse {
    FieldNameA FieldA = 1;
    FResult FieldName = 2;
}

message HResult {
    FieldF FieldF = 1;
    repeated I FieldName = 2;
}

message HResponse {
    FieldNameA FieldA = 1;
    HResult FieldName = 2;
}

service Ind_1 {
    rpc EndpointA(B)
        returns (BResponse) {}
    
    rpc EndpointB(F)
        returns (FResponse) {}
    
    rpc EndpointC(D)
        returns (DResponse) {}
    
    rpc EndpointD(H)
        returns (HResponse) {}
}